--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
 <body>
     
 <div class="container">
-    <div class="red">HEADER</div>
+    
+    <div class="item red">HEADER</div>
 
-    <div class="blue">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic, eius sit animi ducimus aspernatur natus dolorum ab? Alias totam, possimus ut cumque in dolorum impedit quos eius soluta labore. Voluptatem.</div>
+    <div class="item green">ASIDE LEFT</div>
 
-    <div class="green">ASIDE LEFT</div>
+    <div class="item blue">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic, eius sit animi ducimus aspernatur natus dolorum ab? Alias totam, possimus ut cumque in dolorum impedit quos eius soluta labore. Voluptatem.</div>
 
-    <div class="pink">ASIDE RIGHT</div>
 
-    <div class="purple">FOOTER</div>
+    <div class="item pink">ASIDE RIGHT</div>
+
+    <div class="item purple">FOOTER</div>
 </div>
 
 
